[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupytertracker"
version = "0.1.0"
description = "Track Jupyter notebook cell execution and export a clean, ordered Python script"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "ipython>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "nbformat>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jupytertracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
